# chttpp

./: .gitignore  README.md  log  meson.build
docker/: Dockerfile  Makefile
include/: chttpp.hpp  http_headers.hpp  mime_types.hpp  null_terminated_string_view.hpp
include/underlying/: common.hpp  error_code.hpp  http_result.hpp  libcurl.hpp  status_code.hpp  winhttp.hpp
subprojects/: picojson.wrap
subprojects/packagefiles/picojson_patch/: meson.build
test/: chttpp_non_communication_test.cpp  chttpp_test.cpp  cookie_test.hpp  exptr_wrapper_test.hpp  http_config_test.hpp  http_result_test.hpp  libcurl_test.hpp  locally_completed_test.cpp  locally_completed_test.hpp  status_code_test.hpp  winhttp_test.hpp
test/locally/: cookie_test.hpp  exptr_wrapper_test.hpp  http_config_test.hpp
test/underlying/: libcurl_test.hpp
